--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
         <div class="cart">
             <h2>Shopping Cart</h2>
             <ul>
-                <li v-for="item in cart">
-                    {{ item.title }}
+                <li class="cart-item" v-for="item in cart">
+                    <div class="item-title">{{ item.title }}</div>
+                    <span class="item-qty">${{ item.price }} x {{ item.qty }}</span>
                 </li>
             </ul>
-            <div>
+            <div v-if="cart.length">
                 <div>Total: {{ total }}</div>
+            </div>
+            <div v-else class="empty-cart">
+                No items in the cart.
             </div>
         </div>
     </div>
